--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "framer-motion": "^11.2.9",
     "postcss": "^8",
+    "react-spring": "^9.7.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
